# iot

./: README.md
assignment1/demo_blinky/: CMakeLists.txt  README.txt
assignment1/demo_blinky/src/: main.c
assignment1/demo_rtt/: README.txt
assignment1/demo_rtt/src/: main.c
assignment1/my_blinky/: README.md  prj.conf
assignment1/my_blinky/src/: main.c
assignment2/hts221/: CMakeLists.txt  prj.conf
assignment2/hts221/src/: main.c
assignment2/my_beacon/: CMakeLists.txt  README.md  prj.conf
assignment2/my_beacon/src/: hts.c  hts.h  led.c  led.h  main.c
